<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qinlei.retrofitutilsdemo.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="get"
        android:text="@string/get" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="post"
        android:text="@string/post" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="postRaw"
        android:text="@string/postraw" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="put"
        android:text="@string/put" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="putRaw"
        android:text="@string/putraw" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="delete"
        android:text="@string/delete" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="upload"
        android:text="@string/upload" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="download"
        android:text="@string/download" />

</LinearLayout>
